fix background dark in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -421,7 +421,6 @@ body{
 .product-all-area{
   padding-inline: 160px;
   padding-bottom: 40px;
-  height: 100vh;
 }
 
 @media screen and (max-width: 1000px) {
